--- a/src/components/BurgerMenuButton.scss
+++ b/src/components/BurgerMenuButton.scss
@@ -6,7 +6,7 @@
 	top: 0;
 	padding: 1rem;
 	background: rgba(darken($primary-color, 5), 1);
-
+	z-index: 100;
 	cursor: pointer;
 	@include easeOutQuick;
 	@include breakMd {
